--- a/src/Msp/FrontendBundle/Resources/views/User/conf_connect_form.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/User/conf_connect_form.html.twig
@@ -1,4 +1,4 @@
-<form id="conference" action="{{ path("msp_conference_connexion") }}" method="post">
+<form id="conference" class="hide" action="{{ path("msp_conference_connexion") }}" method="post">
     <fieldset class=" text-center">
         <legend>CONFÉRENCE</legend>
         {{ form_widget(form.titre) }}
