--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -23,8 +23,8 @@
            nouveau domaines tel que la géométrie, les grandeurs et mesures. En effet, l’approfondissement des 
            calculs et la gestion des données, offrent de nouvelles perspectives dans l’approche de problèmes 
            concrets.<br />
-           A la fin du collège, l’élève devrait être apte à résoudre des problèmes un peu plus sophistiqués 
-           aussi bien graphiquement qu’à l’aide de calculs numériques.  
+           <i>A la fin du collège, l’élève devrait être apte à résoudre des problèmes un peu plus sophistiqués 
+               aussi bien graphiquement qu’à l’aide de calculs numériques.</i>  
         </header>
        
         <div id="tabs">
