--- a/src/Msp/FrontendBundle/Resources/views/Page/contact.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/contact.html.twig
@@ -18,14 +18,14 @@
 {# Le contenu de la page #}
 {% block content %}
     <header>
-        <h1>CONTACT</h1>
+        <h1>RENSEIGNEMENTS & INSCRIPTIONS AU 01 25 63 00 00</h1>
     </header>
     
     <div class="contact">
         
         <div class="firswrap">
             <article>
-                <h1>Nous vous rappelons (service immédiat et gratuit)</h1>
+                <h1>NOUS VOUS RAPPELONS (service immédiat et gratuit)</h1>
                 
                 <form id="contactform" action="" method="post" {{ form_enctype(form) }}>
                     <fieldset>
