--- a/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
@@ -18,9 +18,9 @@
         
         <header class="header">
            Le Lycée constitue une étape cruciale dans la vie de l’élève, des choix d’orientation plus ou 
-           moins irréversible le conduiront à son projet professionnel ou académique. Dans le but de lui 
+           moins irréversible le conduiront à son projet professionnel ou académique. <i>Dans le but de lui 
            ouvrir toutes les portes et de lui assurer le minimum de bagages pour la poursuite de son projet, 
-           un accompagnement adapte est préférable.
+           un accompagnement adapte est préférable.</i>
         </header>
        
         <div id="tabs">
