--- a/src/Msp/FrontendBundle/Resources/views/Page/primaire.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/primaire.html.twig
@@ -20,7 +20,7 @@
             En primaire, l’élève est exposé à ses premières notions de mathématiques via la numérotation, 
             la résolution de problèmes simples à l’aide des opérateurs de bases que sont l’addition, la 
             soustraction,  la multiplication et la division.<br />
-            Le majeur enjeu est la maîtrise de ces quatre modes opératoires.
+            <i>Le majeur enjeu est la maîtrise de ces quatre modes opératoires.</i>
         </p>
         
         <p class="footer">
