--- a/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
@@ -19,7 +19,7 @@
         <p class="header">
             A la faculté, l’étudiant a besoin d’accompagnement pour s’adapter à ce nouvel environnement où 
             le professeur est concentré sur un groupe et non plus sur les individus.<br />
-            Il faut absolument être capable de suivre le groupe pour ne pas se retrouver très vite perdu.
+            <i>Il faut absolument être capable de suivre le groupe pour ne pas se retrouver très vite perdu.</i>
         </p>
         
         <p class="footer">
